// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconWithCount Component Snapshot matches snapshot with all props 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "flex-end",
    }
  }
  testID="iconWithCountTest"
>
  <View
    testID="image-STORE_DASHBOARD"
  />
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#E10092",
        "borderRadius": 16,
        "height": 16,
        "justifyContent": "center",
        "left": -10,
        "top": -8,
        "width": 16,
      }
    }
  >
    <Text
      testID="count-text"
    >
      5
    </Text>
  </View>
</View>
`;

exports[`IconWithCount Component Snapshot matches snapshot with showCount true 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "flex-end",
    }
  }
  testID="iconWithCountTest"
>
  <View
    testID="image-default"
  />
</View>
`;
